unpackaged/main/default/objects/Access_Circuits__c/Access_Circuits__c.object-meta.xml
<CustomObject>
    <description>Access Circuits</description>
    <label>Access Circuit</label>
    <nameField>
        <label>Circuit ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Circuits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>