unpackaged/main/default/objects/Access_Circuits__c/fields/Address_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Address_Change_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Change Requested</label>
    <type>Checkbox</type>
</CustomField>