unpackaged/main/default/objects/Access_Circuits__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <description>Intelepeer Batch ID</description>
    <label>Batch ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>