unpackaged/main/default/objects/Access_Circuits__c/fields/BTN__c.field-meta.xml
<CustomField>
    <fullName>BTN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTN</label>
    <type>Checkbox</type>
</CustomField>