unpackaged/main/default/objects/Access_Circuits__c/fields/Circuit_Down_Link_Speed__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Down_Link_Speed__c</fullName>
    <label>Circuit Down Link Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>256 KB</fullName>
            </value>
            <value>
                <fullName>384 KB</fullName>
            </value>
            <value>
                <fullName>512 KB</fullName>
            </value>
            <value>
                <fullName>768 KB</fullName>
            </value>
            <value>
                <fullName>1.0 MB</fullName>
            </value>
            <value>
                <fullName>1.5 MB</fullName>
            </value>
            <value>
                <fullName>3.0 MB</fullName>
            </value>
            <value>
                <fullName>4.0 MB</fullName>
            </value>
            <value>
                <fullName>4.5 MB</fullName>
            </value>
            <value>
                <fullName>6.0 MB</fullName>
            </value>
            <value>
                <fullName>10.0 MB</fullName>
            </value>
            <value>
                <fullName>15.0 MB</fullName>
            </value>
            <value>
                <fullName>20.0 MB</fullName>
            </value>
            <value>
                <fullName>25.0 MB</fullName>
            </value>
            <value>
                <fullName>40.0 MB</fullName>
            </value>
            <value>
                <fullName>50.0 MB</fullName>
            </value>
            <value>
                <fullName>100.0 MB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>