unpackaged/main/default/objects/Access_Circuits__c/fields/Circuit_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>equals</operation>
            <value>Vendor, Customer and Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Circuits (Account)</relationshipLabel>
    <relationshipName>Access_Circuits1</relationshipName>
    <type>Lookup</type>
</CustomField>