unpackaged/main/default/objects/Access_Circuits__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Intelepeer City</description>
    <label>City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>