unpackaged/main/default/objects/Access_Circuits__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <description>Intelepeer City Code</description>
    <label>City Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>