unpackaged/main/default/objects/Access_Circuits__c/fields/CName__c.field-meta.xml
<CustomField>
    <fullName>CName__c</fullName>
    <label>CName</label>
    <length>24</length>
    <type>Text</type>
</CustomField>