unpackaged/main/default/objects/Access_Circuits__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>