unpackaged/main/default/objects/Access_Circuits__c/fields/default_fixed_cost__c.field-meta.xml
<CustomField>
    <fullName>default_fixed_cost__c</fullName>
    <description>default fixed cost</description>
    <label>Default Fixed Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>