unpackaged/main/default/objects/Access_Circuits__c/fields/default_recurring_revenue__c.field-meta.xml
<CustomField>
    <fullName>default_recurring_revenue__c</fullName>
    <label>Default Recurring Revenue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>