unpackaged/main/default/objects/Access_Circuits__c/fields/Fax_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Fax_Provider_Address__c</fullName>
    <label>Fax Provider Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>