unpackaged/main/default/objects/Access_Circuits__c/fields/Fax_Provider_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Fax_Provider_Contact_Email__c</fullName>
    <label>Fax Provider Contact Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>