unpackaged/main/default/objects/Access_Circuits__c/fields/Fax_Provider_Department__c.field-meta.xml
<CustomField>
    <fullName>Fax_Provider_Department__c</fullName>
    <label>Fax Provider Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>