unpackaged/main/default/objects/Access_Circuits__c/fields/Fax_Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Fax_Provider_Last_Name__c</fullName>
    <label>Fax Provider Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>