unpackaged/main/default/objects/Access_Circuits__c/fields/Fax_Provider_Owner_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Fax_Provider_Owner_Customer_ID__c</fullName>
    <label>Fax Provider Owner Customer ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>