unpackaged/main/default/objects/Access_Circuits__c/fields/Fax_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Fax_Provider_Type__c</fullName>
    <label>Fax Provider Type</label>
    <length>24</length>
    <type>Text</type>
</CustomField>