unpackaged/main/default/objects/Access_Circuits__c/fields/Last_Bill_Total__c.field-meta.xml
<CustomField>
    <fullName>Last_Bill_Total__c</fullName>
    <label>Last Bill Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>