unpackaged/main/default/objects/Access_Circuits__c/fields/Last_BTN_Verify_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_BTN_Verify_Date__c</fullName>
    <label>Last BTN Verify Date</label>
    <type>Date</type>
</CustomField>