unpackaged/main/default/objects/Access_Circuits__c/fields/Last_Import_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Import_Date_Time__c</fullName>
    <label>Last Import Date/Time</label>
    <type>DateTime</type>
</CustomField>