unpackaged/main/default/objects/Access_Circuits__c/fields/LATA__c.field-meta.xml
<CustomField>
    <fullName>LATA__c</fullName>
    <label>LATA</label>
    <length>16</length>
    <type>Text</type>
</CustomField>