unpackaged/main/default/objects/Access_Circuits__c/fields/Node_Element_ID__c.field-meta.xml
<CustomField>
    <fullName>Node_Element_ID__c</fullName>
    <formula>Account__r.Node_Element_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Node Element ID</label>
    <type>Text</type>
</CustomField>