unpackaged/main/default/objects/Access_Circuits__c/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <label>NPA</label>
    <length>8</length>
    <type>Text</type>
</CustomField>