unpackaged/main/default/objects/Access_Circuits__c/fields/Primary_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Primary_Carrier__c</fullName>
    <description>Primary Carrier</description>
    <label>Primary Carrier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>