unpackaged/main/default/objects/Access_Circuits__c/fields/Primary_Carrier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Carrier_Account_Number__c</fullName>
    <description>Primary carrier account number</description>
    <label>Primary Carrier Account Number</label>
    <length>45</length>
    <type>Text</type>
</CustomField>