unpackaged/main/default/objects/Access_Circuits__c/fields/Primary_Carrier_Trouble_Reporting_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Carrier_Trouble_Reporting_Number__c</fullName>
    <description>Primary carrier trouble reporting number</description>
    <label>Primary Carrier Trouble Reporting Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>