unpackaged/main/default/objects/Access_Circuits__c/fields/revio_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>revio_Service_Type__c</fullName>
    <formula>IF(ISPICKVAL(Circuit_Type__c,"Local DID"),"20",
IF(ISPICKVAL(Circuit_Type__c,"Toll Free DID"),"27",
IF(ISPICKVAL(Circuit_Type__c,"eFax"),"26",
IF(ISPICKVAL(Circuit_Type__c,"FaxLync"),"26",
IF(ISPICKVAL(Circuit_Type__c,"International DID"),"42",
IF(ISPICKVAL(Circuit_Type__c,""),"",
"17"))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Service Type</label>
    <type>Text</type>
</CustomField>