unpackaged/main/default/objects/Access_Circuits__c/fields/Short_Circuit__c.field-meta.xml
<CustomField>
    <fullName>Short_Circuit__c</fullName>
    <label>Short Circuit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>