unpackaged/main/default/objects/Access_Circuits__c/fields/Support_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Support_Passcode__c</fullName>
    <description>When circuit is ordered a support password is used to allow technicians to get information from the carrier and provide support if case of trouble.</description>
    <inlineHelpText>When circuit is ordered a support password is used to allow technicians to get information from the carrier and provide support if case of trouble.</inlineHelpText>
    <label>Support Passcode</label>
    <length>36</length>
    <type>Text</type>
</CustomField>