unpackaged/main/default/objects/Access_Circuits__c/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <defaultValue>"1"</defaultValue>
    <description>Sipgate tenant ID when serving more than one account with 1 node element ID</description>
    <label>Tenant ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>