unpackaged/main/default/objects/Access_Circuits__c/fields/Toll_Free_Class__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Class__c</fullName>
    <label>Toll Free Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower 48</fullName>
            </value>
            <value>
                <fullName>All 50 States</fullName>
            </value>
            <value>
                <fullName>All 50 + Canada</fullName>
            </value>
            <value>
                <fullName>All 50 + Canada + Caribbean</fullName>
            </value>
            <value>
                <fullName>All 50 + Canada + Caribbean + Puerto Rico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>