unpackaged/main/default/objects/Access_Circuits__c/fields/Transfer_Customer_Asssigned__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Customer_Asssigned__c</fullName>
    <description>Used to track the transfer of DIDs from Broadvox to Inteleper</description>
    <label>Transfer Customer Asssigned</label>
    <length>80</length>
    <type>Text</type>
</CustomField>