unpackaged/main/default/objects/Access_Circuits__c/fields/Transfer_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Order_Date__c</fullName>
    <description>Used to track transfer of DIDs from Broadvox to Intelepeer</description>
    <label>Transfer Order Date</label>
    <type>DateTime</type>
</CustomField>