unpackaged/main/default/objects/Access_Circuits__c/fields/Transferred_from_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Transferred_from_Carrier__c</fullName>
    <label>Transferred from Carrier</label>
    <length>32</length>
    <type>Text</type>
</CustomField>