unpackaged/main/default/objects/Access_Circuits__c/listViews/Access_Circuits_IPro_Media.listView-meta.xml
<ListView>
    <fullName>Access_Circuits_IPro_Media</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Comments__c</columns>
    <columns>Circuit_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>startsWith</operation>
        <value>IPro Media</value>
    </filters>
    <label>Access Circuits - IPro Media</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>