unpackaged/main/default/objects/Access_Circuits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Primary_Carrier__c</columns>
    <columns>Circuit_Type__c</columns>
    <columns>Circuit_Down_Link_Speed__c</columns>
    <columns>Circuit_Uplink_Speed__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Imported__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>